Change grid to flex, still issue with excess spacing

--- a/frontend/src/components/Dashboard/DashboardItemJobIndex/JobItem/JobItem.scss
+++ b/frontend/src/components/Dashboard/DashboardItemJobIndex/JobItem/JobItem.scss
@@ -1,21 +1,27 @@
 .job-item-container {
     position: relative;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    // display: grid;
+    // grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    // grid-gap: 1em;
     padding: 15px;
     margin: 5px;
     background: #fff 50%;
     background-size: cover;
     border-radius: 5px;
-    max-width: 250px;
+    // height: auto;
+    // height: 100%;
+    width: 250px;
+    min-height: 50px;
     box-shadow: 8px 14px 38px rgba(39, 44, 49, 0.06),
       1px 3px 8px rgba(39, 44, 49, 0.03);
 
-    &:hover {
-      box-shadow: 0 0 50px rgba(30, 34, 37, 0.1),
-        0 10px 16px rgba(39, 44, 49, 0.07);
-    }
+    // &:hover {
+    //   box-shadow: 0 0 50px rgba(30, 34, 37, 0.1),
+    //     0 10px 16px rgba(39, 44, 49, 0.07);
+    // }
 }
 
 .job-item-delete {
@@ -57,6 +63,7 @@
 
 .job-item-header-wrapper {
     display: flex;
+    margin-bottom: 10px;
 }
 
 .job-item-category {
@@ -123,7 +130,8 @@
 
 .job-item-date-wrapper {
     display: flex;
-    align-items: baseline
+    align-items: baseline;
+    margin-bottom: 10px;
 }
 
 .job-item-date {
@@ -137,6 +145,12 @@
 .job-item-description {
     font-size:.9rem;
     line-height: 1rem;
+    margin-bottom: 15px;
+}
+
+.job-item-status {
+    color: rgb(209, 99, 86);
+    font-weight: 500;
 }
 
 .job-item-status-button {
